--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   height: 100dvh; /* Dynamic viewport height for mobile */
   overflow-x: hidden;
   margin: 0;
@@ -10,7 +10,7 @@
 body, html {
   margin: 0;
   padding: 0;
-  height: 100%;
+  /* height: 100%; */
   height: 100dvh; /* Dynamic viewport height for mobile */
   overflow: hidden;
 }
